test-helm/templates/p3x-redis-ui-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3x-redis-ui-nodeport
  namespace: croms
spec:
  type: NodePort
  ports:
    - port: 7843
      targetPort: 7843
      nodePort: 30843   # 원하는 NodePort 지정
  selector:
    app: p3x-redis-ui

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: p3x-redis-ui
  namespace: croms
spec:
  serviceName: p3x-redis-ui
  replicas: 1
  selector:
    matchLabels:
      app: p3x-redis-ui
  template:
    metadata:
      labels:
        app: p3x-redis-ui
    spec:
      containers:
        - name: p3x-redis-ui
          image: patrikx3/p3x-redis-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7843
              name: http
          volumeMounts:
          - name: p3x-data
            mountPath: /settings              # 컨테이너 내부의 데이터 저장 경로
      # ----------------- 볼륨 정의 -----------------
      volumes:
      - name: p3x-data
        persistentVolumeClaim:
          claimName: p3x-data-pvc     # 맨 위에서 정의한 PVC를 사용
